Added html content and uploaded the relavent asset files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,23 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+        <section class="page-container">
+            <h1 class="h1">Discover hidden places in the world arround you</h1>
+            <a class="link" href="https://3e1812d1578c4870921d39faec3f34a7.cc-propeller.cloud/#">Download Excursion. (Coming Soon!)</a>
+        </section>
+        <section class="page-container">
+            <video controls>
+                <source src="/Assets/excursion.mp4" type="video/mp4">
+            </video>
+        </section>
+        <section class="page-container">
+            <h2 class="h2">Your Personal Travel Guide</h2>
+            <p>Excursion remembers places you like, and recommends new places of interest around you.</p>
+            <img src="Assets/camp.webp" alt="A campsite under the stars">
+            <img src="Assets/phone.webp" alt="Phone Icon">
+            <h2 class="h2">Coming soon for IOS and Android</h2>
+            <a class="link" href="https://3e1812d1578c4870921d39faec3f34a7.cc-propeller.cloud/#">Download Excursion. (Coming Soon!)</a>
+        </section>
         <script src="" async defer></script>
     </body>
 </html>
